# azure-orbital-space-sdk

./: CI-SDK-PACKAGE-SOLUTION.md  CLAUDE.md  GITHUB-PACKAGES-IMPLEMENTATION-REPORT.md  NET8-MIGRATION-SUMMARY.md  NET8-MIGRATION.md  NuGet.config  QUICK-START-GITHUB-PACKAGES.md  TESTING-CHECKLIST.md
.github/: CICD_SUMMARY.md  NET8-MIGRATION-CHECKLIST.md  QUICKSTART.md
.github/workflows/: README.md  ci.yml  codeql.yml  container-build.yml  docs.yml  publish-packages.yml  release.yml  security-scan.yml
docs/development/: GITHUB-PACKAGES-SETUP.md
docs/migration/: NET8-UPGRADE-GUIDE.md
docs/overview/: requirements.md
docs/security/: INPUT-VALIDATION.md
samples/payloadapps/dotnet/starter-app/src/: starter-app.csproj
samples/payloadapps/dotnet/starter-app/test/: .editorconfig  .gitignore  QUICK_START.md  (+8 more)
samples/payloadapps/python/: README-GITHUB-PACKAGES.md
samples/payloadapps/python/shipdetector-onnx/: .coveragerc  TESTING_SUMMARY.md  pyproject.toml  pytest.ini
samples/payloadapps/python/shipdetector-onnx/docker/: Dockerfile.prod
samples/payloadapps/python/shipdetector-onnx/schedules/debug_image/: sample-app-shipdetector-onnx.yaml
samples/payloadapps/python/shipdetector-onnx/schedules/prod/: sample-app-shipdetector-onnx.yaml
samples/payloadapps/python/shipdetector-onnx/tests/: README.md  __init__.py  conftest.py
samples/payloadapps/python/shipdetector-onnx/tests/integration/: __init__.py  test_image_pipeline.py
samples/payloadapps/python/shipdetector-onnx/tests/unit/: __init__.py  test_app_config.py  test_object_detection.py  test_ship_detection.py
(+19 files in other folders)
