[tool.poetry]
name = "app-python-shipdetector-onnx"
description = "A sample app leveraging the Microsoft Azure Orbital SDK to do AI-based shiped detection"
authors = ["Azure Space SDK"]
version = "1.0.0"
readme = "README.md"

[[tool.poetry.packages]]
include = "app"
from = "src"

[[tool.poetry.include]]
path = ".protos/datagenerator/planetary_computer"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
onnx = "*"
onnxruntime = "*"
Pillow = "*"
rasterio = "1.3.3"
opencv-python-headless = "^4.8.1.78"
grpcio-tools = "^1.48.2"
grpcio = "^1.48.2"
protobuf = "^4.25.8"
numpy = "1.24.4"

microsoftazurespacefx = "0.11.0"

# Note: microsoftazurespacefx is installed from a locally built wheel in CI
# GitHub Packages does not support PyPI simple repository format, so the
# package is built from source (azure-orbital-space-sdk-client) during CI runs

[tool.poetry.group.spacefx-dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
pip = "*"
setuptools = "*"
wheel = "*"
build = "*"
mypy = "*"
mypy-extensions = "*"
mypy-protobuf = "*"
debugpy = "*"

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"
